# python-data-processing-uts

./: .gitignore  pyproject.toml
43031/Workshop1/: HOMEWORK - week 1 Q&A.ipynb  HOMEWORK - week 1 Qs ONLY.ipynb
43031/Workshop2/: HOMEWORK - Topic 2 Q&A.ipynb  HOMEWORK - Topic 2 Qs ONLY solved.ipynb  Topic 2 Q&A.ipynb
43031/Workshop3/: Topic 3 Q&As.ipynb  (+2 more)
Assignment2/: assignment2.ipynb  non_numeric_stats.csv  numeric_stats.csv
Assignment3/: assignment3.ipynb  drug_consumption_preprocessed.csv
Assignment3-exp/: assignment3.ipynb
Quiz2/: quiz.ipynb
Workshop1/: HOMEWORK - week 1 Qs ONLY solved.ipynb  Week 1 Q&A.ipynb  Week 1 Qs ONLY.ipynb  Week 1 Qs solved.ipynb
Workshop10/: HOMEWORK Topic 10 Q&As.ipynb  HOMEWORK Topic 10 Qs ONLY.ipynb  Topic 10 Q&As_v2.ipynb  Topic 10 Qs ONLY_v2.ipynb
Workshop11/: Topic 11 Q&As_v2.ipynb  Topic 11 Qs ONLY_v2.ipynb  visa_processed (1).csv
Workshop2/: Topic 2 Qs ONLY solved.ipynb  Topic 2 Qs ONLY.ipynb
Workshop3/: HOMEWORK - Topic 3 Q&As.ipynb  HOMEWORK - Topic 3 Qs ONLY solved.ipynb  Topic 3 Qs ONLY.ipynb
Workshop5/: HOMEWORK Topic 5 Q&As.ipynb
Workshop6/: Topic 6 Q&As_v2.ipynb  Topic 6 Qs ONLY_v2.ipynb
Workshop7/: HOMEWORK Topic 7 Q&As.ipynb  HOMEWORK Topic 7 Qs ONLY solved.ipynb  Topic 7 Q&As_v2.ipynb  Topic 7 Qs ONLY_v2.ipynb
Workshop8/: HOMEWORK Topic 8 Q&As.ipynb  HOMEWORK Topic 8 Qs ONLY solved.ipynb  Topic 8 Q&As_v2.ipynb  Topic 8 Qs ONLY_v2 solved.ipynb  Topic 8 Qs ONLY_v2.ipynb
Workshop9/: HOMEWORK Topic 9 Q&As.ipynb  HOMEWORK Topic 9 Qs ONLY.ipynb  Topic 9 Q&As_v2.ipynb  Topic 9 Qs ONLY_v2.ipynb
(+26 files in other folders)
