[tool.poetry]
name = "python-data-processing-uts"
version = "0.1.0"
description = ""
authors = ["Nicolas Huber <nicolas.huber2@uzh.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.0"
pydantic = "^2.6.1"
icecream = "^2.1.3"
pendulum = "^3.0.0"
loguru = "^0.7.2"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
